--- a/scss/_C-navs.scss
+++ b/scss/_C-navs.scss
@@ -520,7 +520,7 @@
                 font-weight: 500;
               }
 
-              #arrow {
+              #homeArrow {
                 width: 25px;
                 height: 25px;
                 align-self: center;
@@ -600,7 +600,7 @@
                 font-weight: 500;
               }
 
-              #arrow {
+              #aboutUsArrow {
                 width: 25px;
                 height: 25px;
                 align-self: center;
@@ -680,7 +680,7 @@
                 font-weight: 500;
               }
 
-              #arrow {
+              #productsArrow {
                 width: 25px;
                 height: 25px;
                 align-self: center;
@@ -760,7 +760,7 @@
                 font-weight: 500;
               }
 
-              #arrow {
+              #blogsArrow {
                 width: 25px;
                 height: 25px;
                 align-self: center;
