--- a/scss/_D-topOne.scss
+++ b/scss/_D-topOne.scss
@@ -123,30 +123,339 @@
         cursor: pointer;
       }
 
-      ul {
+      #topOneNavBar {
         display: flex;
         flex-direction: row;
-        column-gap: 25px;
-        list-style: none;
-        text-transform: capitalize;
-        font-size: 17px;
-
-        @media (min-width: 300px) and (max-width: 767px) {
-          display: none;
-        }
+        align-items: center;
+        column-gap: 10px;
 
         #home {
-          width: fit-content;
-          color: #7bff8d;
-          font-size: 14px;
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          padding: 10px;
+          position: relative;
+          list-style: none;
           cursor: pointer;
+
+          &:hover {
+            #arrow {
+              transform: rotateZ(90deg);
+            }
+
+            #hidden {
+              visibility: visible;
+              height: auto;
+              padding: 10px;
+              z-index: 1;
+              opacity: 1;
+            }
+          }
+
+          #front {
+            display: flex;
+            flex-direction: row;
+            column-gap: 5px;
+            align-items: center;
+            cursor: pointer;
+
+            p {
+              width: fit-content;
+              color: #cacaca;
+              font-size: 14px;
+
+              @media (min-width: 767px) and (max-width: 849px) {
+                font-size: 12px;
+              }
+            }
+
+            #arrow {
+              width: 25px;
+              height: 25px;
+              align-self: center;
+              background-image: url('../images/C-navMob/svgs/right-arrow.svg');
+            }
+          }
+
+          #hidden {
+            opacity: 0;
+            z-index: 0;
+            visibility: hidden;
+            display: flex;
+            flex-direction: column;
+            row-gap: 10px;
+            width: 200px;
+            height: 0;
+            position: absolute;
+            top: 45px;
+            border-radius: 5px;
+            background-color: #f4f4f4;
+            list-style: none;
+
+            #list {
+              padding: 10px;
+              color: #1d1d1d;
+              font-size: 14px;
+              cursor: pointer;
+
+              &:hover {
+                padding: 10px;
+                border-radius: 5px;
+                background-color: #d0d0d0;
+              }
+            }
+          }
         }
 
-        li {
-          width: fit-content;
-          color: #f4f4f4;
-          font-size: 14px;
+        #aboutUs {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          padding: 10px;
+          position: relative;
+          list-style: none;
           cursor: pointer;
+
+          &:hover {
+            #arrow {
+              transform: rotateZ(90deg);
+            }
+
+            #hidden {
+              visibility: visible;
+              height: auto;
+              padding: 10px;
+              z-index: 1;
+              opacity: 1;
+            }
+          }
+
+          #front {
+            display: flex;
+            flex-direction: row;
+            column-gap: 5px;
+            align-items: center;
+            cursor: pointer;
+
+            p {
+              width: fit-content;
+              color: #cacaca;
+              font-size: 14px;
+
+              @media (min-width: 767px) and (max-width: 849px) {
+                font-size: 12px;
+              }
+            }
+
+            #arrow {
+              width: 25px;
+              height: 25px;
+              align-self: center;
+              background-image: url('../images/C-navMob/svgs/right-arrow.svg');
+            }
+          }
+
+          #hidden {
+            opacity: 0;
+            z-index: 0;
+            visibility: hidden;
+            display: flex;
+            flex-direction: column;
+            row-gap: 10px;
+            width: 200px;
+            height: 0;
+            position: absolute;
+            top: 45px;
+            border-radius: 5px;
+            background-color: #f4f4f4;
+            list-style: none;
+
+            #list {
+              padding: 10px;
+              color: #1d1d1d;
+              font-size: 14px;
+              cursor: pointer;
+
+              &:hover {
+                padding: 10px;
+                border-radius: 5px;
+                background-color: #d0d0d0;
+              }
+            }
+          }
+        }
+
+        #products {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          padding: 10px;
+          position: relative;
+          list-style: none;
+          cursor: pointer;
+
+          &:hover {
+            #arrow {
+              transform: rotateZ(90deg);
+            }
+
+            #hidden {
+              visibility: visible;
+              height: auto;
+              padding: 10px;
+              z-index: 1;
+              opacity: 1;
+            }
+          }
+
+          #front {
+            display: flex;
+            flex-direction: row;
+            column-gap: 5px;
+            align-items: center;
+            cursor: pointer;
+
+            p {
+              width: fit-content;
+              color: #cacaca;
+              font-size: 14px;
+
+              @media (min-width: 767px) and (max-width: 849px) {
+                font-size: 12px;
+              }
+            }
+
+            #arrow {
+              width: 25px;
+              height: 25px;
+              align-self: center;
+              background-image: url('../images/C-navMob/svgs/right-arrow.svg');
+            }
+          }
+
+          #hidden {
+            opacity: 0;
+            z-index: 0;
+            visibility: hidden;
+            display: flex;
+            flex-direction: column;
+            row-gap: 10px;
+            width: 200px;
+            height: 0;
+            position: absolute;
+            top: 45px;
+            border-radius: 5px;
+            background-color: #f4f4f4;
+            list-style: none;
+
+            #list {
+              padding: 10px;
+              color: #1d1d1d;
+              font-size: 14px;
+              cursor: pointer;
+
+              &:hover {
+                padding: 10px;
+                border-radius: 5px;
+                background-color: #d0d0d0;
+              }
+            }
+          }
+        }
+
+        #blogs {
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          padding: 10px;
+          position: relative;
+          list-style: none;
+          cursor: pointer;
+
+          &:hover {
+            #arrow {
+              transform: rotateZ(90deg);
+            }
+
+            #hidden {
+              visibility: visible;
+              height: auto;
+              padding: 10px;
+              z-index: 1;
+              opacity: 1;
+            }
+          }
+
+          #front {
+            display: flex;
+            flex-direction: row;
+            column-gap: 5px;
+            align-items: center;
+            cursor: pointer;
+
+            p {
+              width: fit-content;
+              color: #cacaca;
+              font-size: 14px;
+
+              @media (min-width: 767px) and (max-width: 849px) {
+                font-size: 12px;
+              }
+            }
+
+            #arrow {
+              width: 25px;
+              height: 25px;
+              align-self: center;
+              background-image: url('../images/C-navMob/svgs/right-arrow.svg');
+            }
+          }
+
+          #hidden {
+            opacity: 0;
+            z-index: 0;
+            visibility: hidden;
+            display: flex;
+            flex-direction: column;
+            row-gap: 10px;
+            width: 200px;
+            height: 0;
+            position: absolute;
+            top: 45px;
+            border-radius: 5px;
+            background-color: #f4f4f4;
+            list-style: none;
+
+            #list {
+              padding: 10px;
+              color: #1d1d1d;
+              font-size: 14px;
+              cursor: pointer;
+
+              &:hover {
+                padding: 10px;
+                border-radius: 5px;
+                background-color: #d0d0d0;
+              }
+            }
+          }
+        }
+
+        #contacts {
+          display: flex;
+          height: inherit;
+          align-items: center;
+          cursor: pointer;
+
+          p {
+            width: fit-content;
+            color: #cacaca;
+            font-size: 14px;
+
+            @media (min-width: 767px) and (max-width: 849px) {
+              font-size: 12px;
+            }
+          }
         }
       }
     }
